# KidsCanvas

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
ai_agent/: README.md  pyproject.toml
ai_agent/app/: main.py
ai_agent/app/core/: config.py
ai_agent/app/pipelines/: patch_generation.py
ai_agent/app/tests/: test_generate.py  test_patch_generation.py
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/routes/: audit.py  events.py  health.py  metrics.py  replay.py  rooms.py  strokes.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/core/db/: __init__.py  models.py
backend/app/models/: __init__.py
backend/app/schemas/: audit.py  objects.py  replay.py  rooms.py  strokes.py
backend/app/services/: audit.py  objects.py  rooms.py  strokes.py  turn_processor.py  turns.py
backend/app/tests/: test_audit_replay.py  test_database_persistence.py  test_database_roundtrip.py  test_events_api.py  test_health.py  test_objects.py  test_rooms.py  test_strokes.py  test_turn_processor.py
backend/app/ws/: rooms.py
content_safety/: README.md  pyproject.toml
content_safety/app/core/: config.py
content_safety/app/policies/: moderation.py
content_safety/app/tests/: test_moderation.py
docs/: README.md  prototype_todo.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts  types.ts
frontend/src/api/: GameServiceClient.ts
frontend/src/canvas/: InfiniteCanvas.ts
frontend/src/styles/: main.css
frontend/src/ui/: AiTurnFeed.ts  ObjectPanel.ts  Toolbar.ts
frontend/src/ws/: RealtimeClient.ts
realtime/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
realtime/src/: config.ts  index.ts
scripts/: dev.sh
